--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/b3ae48c1c2.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
-    <title>Grigot Theatres</title>
+    <title>Griot Theatres</title>
 </head>
 <body>
     <!-- Navbar -->
     <nav>
         <div class="nav-container">
-            <div class="nav-brand">Grigot Theatre</div>
+            <div class="nav-brand">Griot Theatre</div>
             <div class="navbar-menu">
                 <ul>
                     <li class="nav-item">
@@ -172,7 +172,7 @@
                     <p class="tiny"><i class="icons fa-solid fa-location-dot"></i> Griot Theatre 233 State St Chicago,IL</p>
                 </div> 
                 <div class="tiny">
-                    <p class="tiny"><i class=" icons fa-solid fa-envelope"></i> grigot-theatre@example.com</p>
+                    <p class="tiny"><i class=" icons fa-solid fa-envelope"></i> griot-theatre@example.com</p>
                 </div>  
                 <div class="tiny">
                     <p class="tiny"><i class="icons fa-solid fa-phone"></i> Call Us: (555)-555-5555</p>
